--- a/static/css/login.css
+++ b/static/css/login.css
@@ -68,8 +68,4 @@ nav {
         display: none;
     }
 
-    main {
-        height: auto;
-    }
-
-  }
+}
